fix: add custom scroll and overflow in todo list

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,6 +43,28 @@ body {
     } 
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+    height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.02);
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.3);
+}
+
 .ant-empty {
     display: flex;
     flex-direction: column;
